# metal-dialect

./: .gitignore  CMakeLists.txt  README.md  makefile
MetalRuntime/: Package.swift  README.md
MetalRuntime/Sources/MetalRuntime/: MetalRuntime.m
MetalRuntime/Sources/MetalRuntime/include/: MetalRuntime.h
MetalRuntime/Sources/MetalRuntimeSwift/: Buffer.swift  CommandBuffer.swift  CommandQueue.swift  Device.swift  Wrappable.swift
examples/: CMakeLists.txt
examples/MetalRuntimeExample/MetalRuntimeExample/: main.cpp
examples/MetalRuntimeExample/MetalRuntimeExample.xcodeproj/: project.pbxproj
examples/MetalRuntimeExample/MetalRuntimeExample.xcodeproj/xcshareddata/xcschemes/: MetalRuntimeExample.xcscheme
examples/MetalRuntimeExample/MetalRuntimeExample/examples/: add.cpp  kernels.metal  life.cpp
examples/MetalRuntimeExample/MetalRuntimeExample/utility/: computeDuration.cpp
examples/control-flow/: CMakeLists.txt  main.cpp
examples/expressions/: CMakeLists.txt  main.cpp
examples/fold/: CMakeLists.txt  main.cpp
examples/memory/: CMakeLists.txt  main.cpp
examples/mlir/: life100000000x5.mlir  life5x5.mlir  life5x5_print.mlir
examples/the-game-of-life/: CMakeLists.txt  main.cpp
examples/utility/: CMakeLists.txt  Driver.cpp  Driver.h
include/: CMakeLists.txt
include/Metal/Conversion/: MetalToLLVM.h
include/Metal/Dialect/: CMakeLists.txt  MetalDialect.h  MetalDialect.td  MetalMemRefType.h  MetalOps.h  MetalOps.td
include/metal-c/: Dialects.h
include/metal/Conversion/: CMakeLists.txt  MetalPasses.h  MetalPasses.td  MetalToLLVM.h  Passes.h  Passes.td
include/metal/IR/: CMakeLists.txt  MetalDialect.h  MetalDialect.td  MetalMemRefType.h  MetalOps.h  MetalOps.td  MetalTypes.h  MetalTypes.td
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Metal/: CMakeLists.txt
lib/Metal/Conversion/: LowerToLLVMPass.cpp  MetalToLLVM.cpp
lib/Metal/Dialect/: MetalDialect.cpp  MetalOps.cpp
lib/metal/: CMakeLists.txt
lib/metal/Conversion/: ConvertMetalToLLVM.cpp  MetalToLLVM.cpp  PassDetail.h
lib/metal/IR/: MetalDialect.cpp  MetalOps.cpp  MetalTypes.cpp
metal-opt/: CMakeLists.txt  metal-opt.cpp
metal-translate/: CMakeLists.txt  metal-translate.cpp
python/: CMakeLists.txt  MetalExtension.cpp
python/mlir_metal/dialects/: MetalOps.td  metal.py
runtime/MetalRuntime/MetalRuntime/: Buffer.swift  CommandBuffer.swift  CommandQueue.swift  Device.swift  MetalRuntime.m  Wrappable.swift
runtime/MetalRuntime/MetalRuntime.xcodeproj/: project.pbxproj
runtime/MetalRuntime/MetalRuntime.xcodeproj/xcshareddata/xcschemes/: MetalRuntime.xcscheme
runtime/MetalRuntimeExample/MetalRuntimeExample/: main.cpp
runtime/MetalRuntimeExample/MetalRuntimeExample.xcodeproj/: project.pbxproj
runtime/MetalRuntimeExample/MetalRuntimeExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
runtime/MetalRuntimeExample/MetalRuntimeExample.xcodeproj/xcshareddata/xcschemes/: MetalRuntimeExample.xcscheme
runtime/MetalRuntimeExample/MetalRuntimeExample/examples/: add.cpp  life.cpp
runtime/MetalRuntimeExample/MetalRuntimeExample/utility/: computeDuration.cpp
scripts/: mlir2bin-lib.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  metal-capi-test.c
test/Metal/: metal-opt.mlir  metal-translate.mlir
test/metal/: metal-opt.mlir  metal-translate.mlir
test/metal/metal-opt/: convert-metal-to-llvm.mlir  metal-opt.mlir
test/metal/metal-translate/: mlir-to-msl.mlir
test/python/: smoketest.py
